# BK_NN

./: .agent.md  .env  .gitignore  README.md  TG_bot.py  bot.py  bot_VK.py  main.py  pyproject.toml  questions.json  quize.json  requirements.txt
