[project]
name = "bk-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "asyncio>=4.0.0",
    "fastapi>=0.136.1",
    "pip>=26.1.1",
    "python-dotenv>=1.2.2",
    "umaxbot>=0.2.0",
    "uvicorn>=0.47.0",
]
